# avionics-system-simulator

./: .gitignore  CMakeLists.txt  README.md
include/: FaultHandler.h  FlightController.h  SensorProcessor.h  SystemMonitor.h  TelemetryLogger.h
python/: README.md  requirements.txt  visualize_telemetry.py
src/: FaultHandler.cpp  FlightController.cpp  SensorProcessor.cpp  SystemMonitor.cpp  TelemetryLogger.cpp  main.cpp
